--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
     <ul class="menu">
         <li><a href="https://irfaniyaasmiin.github.io/map_pemilu2024_bali/">See Fullscreen Map</a></li>
-        <li><a href="www.linkedin.com/in/irfani-yaasmiin">My LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/irfani-yaasmiin">My LinkedIn</a></li>
     </ul>
     </nav>
     <!-- Main Content -->
